// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`App CompareResults or CompareOverTime loader Should render an error page for compare over time when the treeherder request fails with an error 400 1`] = `
<body>
  <div>
    <div
      aria-live="assertive"
      class="alert-container"
      role="alert"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorWarning MuiAlert-standardWarning MuiAlert-standard fld8l4l css-gb7yta-MuiPaper-root-MuiAlert-root"
      role="alert"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiAlert-icon css-vab54s-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-6gorna-MuiSvgIcon-root"
          data-testid="ReportProblemOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-zioonp-MuiAlert-message"
      >
        <div
          class="banner-text"
        >
          This is a recently-released version, and we are actively addressing bugs and enhancing performance. If you experience any issues, please
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-s8q751-MuiTypography-root-MuiLink-root"
            href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Testing&component=PerfCompare&status_whiteboard=[pcf]"
            target="_blank"
          >
            report it on Bugzilla
          </a>
          . 
          Find us at
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-s8q751-MuiTypography-root-MuiLink-root"
            href="https://matrix.to/#/#perfcompare:mozilla.org"
            target="_blank"
          >
            #perfcompare:mozilla.org on Matrix
          </a>
          .
        </div>
      </div>
    </div>
    <div
      class="fcndgf6"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row header-container container_fjtw4pp css-k4qgqg-MuiGrid-root"
      >
        <div
          class="toggle-dark-mode f1y1dem6 MuiBox-root css-0"
        >
          <div
            class="MuiFormGroup-root css-1mac7pt-MuiFormGroup-root"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart toggle-text css-1lhdpr4-MuiFormControlLabel-root"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeMedium toggle-switch toggle-dark-mode css-rehya9-MuiSwitch-root"
              >
                <span
                  class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-1jkkk7l-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
                >
                  <input
                    aria-label="Dark mode switch"
                    class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
                    id="Dark mode"
                    name="toggle-dark-mode"
                    type="checkbox"
                  />
                  <span
                    class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1vajmro-MuiTypography-root"
              >
                Dark mode
              </span>
            </label>
          </div>
        </div>
        <div
          class="header-text MuiBox-root css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter MuiTypography-gutterBottom perfcompare-header css-19e1hs-MuiTypography-root"
            style="--Typography-textAlign: center;"
          >
            PerfCompare
          </h1>
        </div>
      </div>
      <section
        class="container_f1h7ern2"
      >
        <div
          class="MuiBox-root css-i3pbo"
        >
          <a
            aria-label="link to home"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-13qcp0f-MuiTypography-root-MuiLink-root"
            href="/"
          >
            <div
              class="MuiStack-root css-ljomt-MuiStack-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-54rgmy-MuiSvgIcon-root"
                data-testid="ChevronLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiBox-root css-0"
              >
                Home
              </span>
            </div>
          </a>
        </div>
        <p>
          Error: 
          Error when requesting treeherder: Treeherder request error
        </p>
        <p>
          More information about this error has been written to the Web Console.
        </p>
      </section>
    </div>
  </div>
</body>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 1`] = `
<p>
  Error: 
  The parameter baseRev is missing.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 2`] = `
<p>
  Error: 
  The parameter baseRepo is missing.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 3`] = `
<p>
  Error: 
  The parameter baseRepo is missing.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 4`] = `
<p>
  Error: 
  There should be as many "newRepo" parameters as there are "newRev" parameters.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 5`] = `
<p>
  Error: 
  There should be as many "newRepo" parameters as there are "newRev" parameters.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 6`] = `
<p>
  Error: 
  The parameter baseRepo "UNKNOWN" should be one of mozilla-central, try, mozilla-beta, mozilla-release, autoland, fenix.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 7`] = `
<p>
  Error: 
  Every parameter newRepo "UNKNOWN" should be one of mozilla-central, try, mozilla-beta, mozilla-release, autoland, fenix.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 8`] = `
<p>
  Error: 
  Every parameter newRepo "UNKNOWN" should be one of mozilla-central, try, mozilla-beta, mozilla-release, autoland, fenix.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 9`] = `
<p>
  Error: 
  The parameter interval is missing.
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 10`] = `
<p>
  Error: 
  The parameter framework should be a number, but it is "FOO".
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 11`] = `
<p>
  Error: 
  The parameter framework should be a number, but it is "FOO".
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 12`] = `
<p>
  Error: 
  The parameter framework isn't a valid value: "25".
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 13`] = `
<p>
  Error: 
  The parameter framework isn't a valid value: "25".
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 14`] = `
<p>
  Error: 
  The parameter interval should be a number, but it is "FOO".
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the requested URL is invalid 15`] = `
<p>
  Error: 
  The parameter interval isn't a valid value: "1000".
</p>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the treeherder request fails with an error 400 1`] = `
<body>
  <div>
    <div
      aria-live="assertive"
      class="alert-container"
      role="alert"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorWarning MuiAlert-standardWarning MuiAlert-standard fld8l4l css-gb7yta-MuiPaper-root-MuiAlert-root"
      role="alert"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiAlert-icon css-vab54s-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-6gorna-MuiSvgIcon-root"
          data-testid="ReportProblemOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-zioonp-MuiAlert-message"
      >
        <div
          class="banner-text"
        >
          This is a recently-released version, and we are actively addressing bugs and enhancing performance. If you experience any issues, please
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-s8q751-MuiTypography-root-MuiLink-root"
            href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Testing&component=PerfCompare&status_whiteboard=[pcf]"
            target="_blank"
          >
            report it on Bugzilla
          </a>
          . 
          Find us at
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-s8q751-MuiTypography-root-MuiLink-root"
            href="https://matrix.to/#/#perfcompare:mozilla.org"
            target="_blank"
          >
            #perfcompare:mozilla.org on Matrix
          </a>
          .
        </div>
      </div>
    </div>
    <div
      class="fcndgf6"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row header-container container_fjtw4pp css-k4qgqg-MuiGrid-root"
      >
        <div
          class="toggle-dark-mode f1y1dem6 MuiBox-root css-0"
        >
          <div
            class="MuiFormGroup-root css-1mac7pt-MuiFormGroup-root"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart toggle-text css-1lhdpr4-MuiFormControlLabel-root"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeMedium toggle-switch toggle-dark-mode css-rehya9-MuiSwitch-root"
              >
                <span
                  class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-1jkkk7l-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
                >
                  <input
                    aria-label="Dark mode switch"
                    class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
                    id="Dark mode"
                    name="toggle-dark-mode"
                    type="checkbox"
                  />
                  <span
                    class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1vajmro-MuiTypography-root"
              >
                Dark mode
              </span>
            </label>
          </div>
        </div>
        <div
          class="header-text MuiBox-root css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter MuiTypography-gutterBottom perfcompare-header css-19e1hs-MuiTypography-root"
            style="--Typography-textAlign: center;"
          >
            PerfCompare
          </h1>
        </div>
      </div>
      <section
        class="container_f1h7ern2"
      >
        <div
          class="MuiBox-root css-i3pbo"
        >
          <a
            aria-label="link to home"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-13qcp0f-MuiTypography-root-MuiLink-root"
            href="/"
          >
            <div
              class="MuiStack-root css-ljomt-MuiStack-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-54rgmy-MuiSvgIcon-root"
                data-testid="ChevronLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiBox-root css-0"
              >
                Home
              </span>
            </div>
          </a>
        </div>
        <p>
          Error: 
          Error when requesting treeherder: Treeherder request error
        </p>
        <p>
          More information about this error has been written to the Web Console.
        </p>
      </section>
    </div>
  </div>
</body>
`;

exports[`App CompareResults or CompareOverTime loader Should render an error page when the treeherder request fails with an error 500 1`] = `
<body>
  <div>
    <div
      aria-live="assertive"
      class="alert-container"
      role="alert"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorWarning MuiAlert-standardWarning MuiAlert-standard fld8l4l css-gb7yta-MuiPaper-root-MuiAlert-root"
      role="alert"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiAlert-icon css-vab54s-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-6gorna-MuiSvgIcon-root"
          data-testid="ReportProblemOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-zioonp-MuiAlert-message"
      >
        <div
          class="banner-text"
        >
          This is a recently-released version, and we are actively addressing bugs and enhancing performance. If you experience any issues, please
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-s8q751-MuiTypography-root-MuiLink-root"
            href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Testing&component=PerfCompare&status_whiteboard=[pcf]"
            target="_blank"
          >
            report it on Bugzilla
          </a>
          . 
          Find us at
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-s8q751-MuiTypography-root-MuiLink-root"
            href="https://matrix.to/#/#perfcompare:mozilla.org"
            target="_blank"
          >
            #perfcompare:mozilla.org on Matrix
          </a>
          .
        </div>
      </div>
    </div>
    <div
      class="fcndgf6"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row header-container container_fjtw4pp css-k4qgqg-MuiGrid-root"
      >
        <div
          class="toggle-dark-mode f1y1dem6 MuiBox-root css-0"
        >
          <div
            class="MuiFormGroup-root css-1mac7pt-MuiFormGroup-root"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart toggle-text css-1lhdpr4-MuiFormControlLabel-root"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeMedium toggle-switch toggle-dark-mode css-rehya9-MuiSwitch-root"
              >
                <span
                  class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-1jkkk7l-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
                >
                  <input
                    aria-label="Dark mode switch"
                    class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
                    id="Dark mode"
                    name="toggle-dark-mode"
                    type="checkbox"
                  />
                  <span
                    class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1vajmro-MuiTypography-root"
              >
                Dark mode
              </span>
            </label>
          </div>
        </div>
        <div
          class="header-text MuiBox-root css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter MuiTypography-gutterBottom perfcompare-header css-19e1hs-MuiTypography-root"
            style="--Typography-textAlign: center;"
          >
            PerfCompare
          </h1>
        </div>
      </div>
      <section
        class="container_f1h7ern2"
      >
        <div
          class="MuiBox-root css-i3pbo"
        >
          <a
            aria-label="link to home"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-13qcp0f-MuiTypography-root-MuiLink-root"
            href="/"
          >
            <div
              class="MuiStack-root css-ljomt-MuiStack-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-54rgmy-MuiSvgIcon-root"
                data-testid="ChevronLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiBox-root css-0"
              >
                Home
              </span>
            </div>
          </a>
        </div>
        <p>
          Error: 
          Error when requesting treeherder: (500) Internal Server Error
        </p>
        <p>
          More information about this error has been written to the Web Console.
        </p>
      </section>
    </div>
  </div>
</body>
`;
